--- a/force-app/main/default/classes/service/resolver/cqrs_Resolver.cls
+++ b/force-app/main/default/classes/service/resolver/cqrs_Resolver.cls
@@ -30,7 +30,7 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE .
  *
  * @description       : Responsible for resolving Handlers,COmmands and Queries Types
- *                      This needs a lot of improvements!!
+ *                      This needs a lot of improvements!! REFACTOR !!!
  * @author            : Bill Anderson
  * @group             : CQRS
  * @last modified on  : 08-27-2021
@@ -39,7 +39,7 @@
  * Ver   Date         Author          Modification
  * 1.0   08-01-2021   Bill Anderson   Initial Version
  **/
-@SuppressWarnings('sf:TooManyMethods')
+@SuppressWarnings('sf:TooManyMethods,PMD.CyclomaticComplexity')
 public virtual inherited sharing class cqrs_Resolver implements cqrs_IResolver {
 
     /////////////////////////////////////////////////////////////////
